--- a/src/index.css
+++ b/src/index.css
@@ -167,11 +167,10 @@ ul.tagList {
 	box-sizing: border-box;
 	padding: 12px 16px;
 	gap: 8px;
-
 	width: 100%;
 	/* height: 194px; */
 
-	background: var(--color-white);
+	background-color: rgba(221, 212, 212, 0.5);
 	/* secondary */
 
 	border: 1px solid var(--color-secondary);
