--- a/src/index.css
+++ b/src/index.css
@@ -56,8 +56,9 @@ body {
 .header {
 	position: fixed;
 	top: 0;
-	/* background-color: var(--color-secondary,0.5); */
-	background-image:url("/img/PC/wood1.jpg");
+	/* background-color: var(--color-secondary); */
+	background-color: var(--color-secondary,0.5);
+	/* background-image:url("/img/PC/wood1.jpg"); */
 	width: 100%;
 	/* height: 72px; */
 	z-index: 100;
@@ -76,7 +77,7 @@ body {
 	overflow-y: hidden;
 	overflow-x: hidden;
 	position: relative;
-	background-image: url("/img/PC/wood4.jpg");
+	background-image: url("/img/PC/wood1.jpg");
 	background-size:cover;
 	/* font-size: large;
 	font-weight: bold; */
