--- a/src/index.css
+++ b/src/index.css
@@ -1,25 +1,23 @@
 /*#region ---------- 通用設定 ----------*/
 /* 主色調設定 */
 :root {
-	 /*主色: 橘色*/ 
+	/*主色: 橘色*/
 	--color-primary: #6daeb3;
 	/* 次要色: 米黃色 */
 	--color-secondary: #c5f1df;
-	 /*灰色 */
+	/*灰色 */
 	--color-gray: #666666;
 	/* 黑色 */
 	--color-dark: #303030;
 	/* 白色 */
 	--color-white: #ffffff;
 }
-
 * {
 	margin: 0;
 	padding: 0;
 }
 
-html,
-body {
+html, body {
 	height: 100vh;
 }
 
@@ -48,10 +46,6 @@ body {
 	text-align: center;
 }
 
-/* 隱藏捲軸 */
-::-webkit-scrollbar {
-	display: none;
-}
 
 .header {
 	position: fixed;
@@ -63,9 +57,8 @@ body {
 	/* height: 72px; */
 	z-index: 100;
 	font-size: 20px;
-    color: inherit; /* 保持文字顏色 */
-    opacity: 1; /* 保持文字不受背景透明度影響 */
-
+	color: inherit; /* 保持文字顏色 */
+	opacity: 1; /* 保持文字不受背景透明度影響 */
 }
 
 .main-content {
@@ -78,18 +71,9 @@ body {
 	overflow-x: hidden;
 	position: relative;
 	background-image: url("/img/PC/wood1.jpg");
-	background-size:cover;
+	background-size: cover;
 	/* font-size: large;
 	font-weight: bold; */
-}
-
-.footer {
-	position: fixed;
-	bottom: 0;
-	background-color: var(--color-secondary);
-	width: 100%;
-	/* height: 72px; */
-	z-index: 100;
 }
 
 /*#endregion 通用設定*/
@@ -105,19 +89,17 @@ a.grayLink {
 	color: var(--color-gray);
 }
 
-a.grayLink:hover {
-	color: var(--color-dark);
-	font-weight: bold;
-}
+	a.grayLink:hover {
+		color: var(--color-dark);
+		font-weight: bold;
+	}
 
 /*#endregion 標題bar*/
 
 /*#region ---------- Tag_bar ----------*/
 
 .tagArea {
-	/* gap: 40px; */
 	overflow-x: auto;
-	/* overflow-y: hidden; */
 }
 
 .tagList li {
@@ -126,39 +108,27 @@ a.grayLink:hover {
 
 ul.tagList {
 	list-style-type: none;
-	margin: 0;
-	padding: 0;
 	display: flex;
 	gap: 20px;
-
+	margin: 0;
+	padding: 0;
 }
 
-
 .btn-cat-tag {
-	/* box-sizing: border-box; */
-	padding: 0.5rem 3rem;
 	height: 40px;
-	border: 2px solid rgb(121, 172, 136);
-	filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.2));
+	border: 2px solid rgb(121,172,136);
+	filter: drop-shadow(0px4px4pxrgba(0,0,0,0.2));
 	border-radius: 8px;
 	white-space: nowrap;
 	font-size: 20px;
 	font-weight: bold;
-
 	display: flex;
-    align-items: center;
-    justify-content: center;
-    
-    background-color: rgba(221, 212, 212, 0.5); /* 按鈕背景透明度為30% */
-    color: inherit; /* 保持文字顏色 */
-    opacity: 1; /* 保持文字不受背景透明度影響 */
-	
-}
-
-.btn-check:checked+.btn-cat-tag {
-	background: var(--color-primary);
-	box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2);
-	color: var(--color-white);
+	align-items: center;
+	justify-content: center;
+	background-color: rgba(221,212,212,0.5); /* 按鈕背景透明度為30% */
+	color: inherit; /* 保持文字顏色 */
+	opacity: 1; /* 保持文字不受背景透明度影響 */
+	padding: .5rem 3rem;
 }
 
 /*#endregion Tag_bar*/
@@ -167,70 +137,60 @@ ul.tagList {
 .menu {
 	height: 80vh;
 	overflow-y: auto;
-
-	/* padding-bottom: 0px; */
-}
-
-.body::-webkit-scrollbar {
-	display: none;
 }
 
 .catTitle {
-	color: rgb(8, 8, 8);
+	color: rgb(8,8,8);
 	text-align: center;
 }
 
-.catTitle span {
-	border-bottom: 1px solid var(--color-primary);
-}
+	.catTitle span {
+		border-bottom: 1px solid var(--color-primary);
+	}
 
 .foodCard {
 	display: flex;
 	box-sizing: border-box;
-	padding: 12px 16px;
 	gap: 8px;
-
 	width: 100%;
-	/* height: 194px; */
-
 	background: var(--color-white);
-	/* secondary */
-
 	border: 2px solid var(--color-secondary);
-	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+	box-shadow: 0 4px 4px rgba(0,0,0,0.2);
 	border-radius: 8px;
+	padding: 12px 16px;
 }
 
-.foodCard:hover {
-	background: var(--color-secondary);
-	border: 1px solid var(--color-primary);
-}
+	.foodCard:hover {
+		background: var(--color-secondary);
+		border: 1px solid var(--color-primary);
+	}
 
-.foodCard.soldout {
-	color: var(--color-gray);
-	background: var(--color-dark);
-	border: 1px solid #ffd5a4;
-	filter: blur(1px);
-	pointer-events: none;
-	position: relative;
-}
+	.foodCard.soldout {
+		color: var(--color-gray);
+		background: var(--color-dark);
+		border: 1px solid #ffd5a4;
+		filter: blur(1px);
+		pointer-events: none;
+		position: relative;
+	}
 
- .foodCard.soldout::before {
-	content: "已售完";
-	position: absolute;
-	top: 50%;
-	left: 30%;
-	transform: translate(-50%, -50%);
-	color: var(--color-white);
-	font-size: 25px;
-	font-weight: bold;
-	z-index: 10;
-} 
+		.foodCard.soldout::before {
+			content: "已售完";
+			position: absolute;
+			top: 50%;
+			left: 30%;
+			transform: translate(-50%,-50%);
+			color: var(--color-white);
+			font-size: 25px;
+			font-weight: bold;
+			z-index: 10;
+		}
+
 .soldoutMask {
 	position: absolute;
 	top: 50%;
 	left: 30%;
-	transform: translate(-50%, -50%);
+	transform: translate(-50%,-50%);
 	color: var(--color-white);
 	font-size: 25px;
 	font-weight: bold;
@@ -248,34 +208,43 @@ ul.tagList {
 	background: var(--color-white);
 	color: var(--color-primary);
 	border-radius: 50rem;
-	padding: 0.25rem 0.5rem;
-	margin: 2px 1px;
 	border: 1px solid var(--color-primary);
 	cursor: pointer;
 	font-size: 1rem;
-}
-
-.btn-check:checked+.btn-pill-primary {
-	background: var(--color-primary);
-	color: var(--color-white);
+	margin: 2px 1px;
+	padding: .25rem .5rem;
 }
 
 /*#endregion Menu*/
 
 /*#region ---------- Footer ----------*/
 
+.footer {
+	height: 56px;
+	position: fixed;
+	bottom: 0;
+	background-color: var(--color-secondary);
+	width: 100%;
+	z-index: 100;
+}
+
 .btn-chkOrder {
 	color: var(--color-white);
-	padding: 8px 56px;
 	width: 196px;
 	height: 40px;
 	background: var(--color-primary);
-	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+	box-shadow: 0 4px 4px rgba(0,0,0,0.2);
 	border-radius: 8px;
+	padding: 8px 56px;
 }
 
 .border-left {
 	border-left: 4px solid var(--color-primary);
+}
+
+.btn-outline-my-primary {
+	color: var(--color-primary);
+	border-color: var(--color-primary);
 }
 
 /*#endregion Footer*/
@@ -283,18 +252,18 @@ ul.tagList {
 /*#region ---------- Modal ----------*/
 
 .modal.fade {
-	transition: opacity 0.2s linear;
+	transition: opacity .2s linear;
 }
 
 .btn-addToCart {
 	/* display: flex; */
 	color: var(--color-white);
 	width: 100%;
-	padding: 0.25rem 1rem;
 	background: var(--color-primary);
-	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+	box-shadow: 0 4px 4px rgba(0,0,0,0.2);
 	border-radius: 8px;
 	margin: 0;
+	padding: .25rem 1rem;
 }
 
 .modalFoodImg {
@@ -305,71 +274,69 @@ ul.tagList {
 	border-radius: 8px;
 }
 
-.btn-minus,
-.btn-add {
+.btn-minus, .btn-add {
 	border-radius: 50%;
 	width: 30px;
 	height: 30px;
 	border: 1px solid var(--color-primary);
 	background: var(--color-white);
 	color: var(--color-primary);
-	/* font-size: 20px;  */
 	font-weight: bold;
-	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+	box-shadow: 0 4px 4px rgba(0,0,0,0.2);
 }
-.fa-minus::before{ content: "-";}
-.fa-plus::before{ content: "+";}
+
+.fa-minus::before {
+	content: "-";
+}
+
+.fa-plus::before {
+	content: "+";
+}
 
 .cartfoodCard {
 	display: flex;
 	box-sizing: border-box;
-	padding: 12px 16px;
 	gap: 8px;
-
 	width: 100%;
-	/* height: 194px; */
-
 	background: var(--color-white);
 	border: 3px solid var(--color-secondary);
-	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+	box-shadow: 0 4px 4px rgba(0,0,0,0.2);
 	border-radius: 8px;
+	padding: 12px 16px;
 }
 
-.cartEdit,
-.cartDelete {
+.cartEdit, .cartDelete {
 	border-radius: 50%;
 	border: 1px solid var(--color-primary);
 	background: var(--color-white);
 	color: var(--color-primary);
-	/* font-size: 20px; */
 	font-weight: bold;
-	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+	box-shadow: 0 4px 4px rgba(0,0,0,0.2);
 }
 
-.cartEdit:hover,
-.cartDelete:hover {
-	background: var(--color-primary);
-	color: var(--color-white);
-}
-
+	.cartEdit:hover,
+	.cartDelete:hover{
+		background: var(--color-primary);
+		color: var(--color-white);
+	}
 .login-input {
 	width: 80%;
 	height: 40px;
-	padding: 0 16px;
 	border: 1px solid var(--color-secondary);
 	border-radius: 8px;
-	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+	box-shadow: 0 4px 4px rgba(0,0,0,0.2);
+	padding: 0 16px;
 }
 
 .btn-login {
 	width: 80%;
 	height: 40px;
-	padding: 0 16px;
 	border: 1px solid var(--color-secondary);
 	border-radius: 8px;
-	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+	box-shadow: 0 4px 4px rgba(0,0,0,0.2);
 	background: var(--color-primary);
 	color: var(--color-white);
+	padding: 0 16px;
 }
 
 .errMsg {
@@ -392,13 +359,13 @@ ul.tagList {
 	/* position: relative; */
 }
 
-@media (max-width: 992px) {
+
+@media max-width 992px {
 	.adBackground {
-		background-image: url("./Img/MOBILE/banner.png");
+		background-image: url(./Img/MOBILE/banner.png);
 		min-height: 676px;
 	}
 }
-
 .adsImg img {
 	width: 100%;
 	object-fit: contain;
@@ -411,3 +378,111 @@ ul.tagList {
 .announce {
 	background-image: url(./Img/logo.png);
 }
+/* backstage */
+
+.page {
+	display: none;
+	height: 80vh;
+	overflow-y: auto;
+}
+/*#endregion 通用設定*/
+
+/*#region ---------- 卡片 ----------*/
+.card {
+	border: none;
+	border-radius: 0;
+	box-shadow: 0 0 10px rgba(0,0,0,0.2);
+}
+
+.card-header {
+	background-color: var(--color-primary);
+	color: var(--color-white);
+	border: none;
+	border-radius: 0;
+}
+
+.card-body {
+	padding: 1rem;
+}
+
+.btn-my-primary {
+	color: var(--color-white);
+	background: var(--color-primary);
+	box-shadow: 0 4px 4px rgba(0,0,0,0.2);
+	border-radius: 8px;
+	padding: .25rem .5rem;
+}
+/*#endregion 卡片*/
+
+/*#region ---------- 產品管理表格 ----------*/
+
+.tableFoodImg {
+	text-align: center;
+	width: 100%;
+	height: 100px;
+	object-fit: cover;
+	border-radius: 8px;
+}
+/*#endregion 產品管理表格*/
+
+/*#region Table設定*/
+
+.h-100vh {
+	height: 80vh;
+}
+
+.table-scroll {
+	overflow-y: auto;
+}
+
+	.table-scroll thead {
+		position: sticky;
+		top: 0;
+		background-color: #ffffff;
+	}
+
+	.table-scroll tbody tr {
+		vertical-align: middle;
+		border-bottom: 1px solid #ddd;
+	}
+
+/*#endregion Table設定*/
+
+/*#region ---------- 產品編輯Modal productEditModal ----------*/
+#productEditModal .modal-body input:not([type="radio"]),
+#productEditModal .modal-body select {
+	width: 100%;
+	height: 40px;
+	border: 1px solid var(--color-secondary);
+	border-radius: 8px;
+	padding: 0 8px;
+}
+
+#productEditModal .modal-body div.item {
+	margin-bottom: 1rem;
+}
+
+.btn-radio {
+	height: 40px;
+	border: 2px solid var(--color-primary);
+	filter: drop-shadow(0px4px4pxrgba(0,0,0,0.2));
+	border-radius: 8px;
+	white-space: nowrap;
+	padding: .5rem 1.5rem;
+}
+
+.btn-check:checked + .btn-pill-primary, .btn-check:checked + .btn-pill-primary {
+	background: var(--color-primary);
+	color: var(--color-white);
+}
+
+::-webkit-scrollbar, .body::-webkit-scrollbar, ::-webkit-scrollbar, .body::-webkit-scrollbar {
+	display: none;
+}
+
+.btn-check:checked + .btn-cat-tag, .btn-check:checked + .btn-radio, .btn-check:checked + .btn-cat-tag {
+	background: var(--color-primary);
+	box-shadow: 0 0 2px rgba(0,0,0,0.2);
+	color: var(--color-white);
+}
+/*#endregion 產品編輯Modal productEditModal*/
